# covid-19-data-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt  workspace.yaml
covid_dagster/: definitions.py
covid_dagster/assets/: __init__.py  dbt_assets.py  ingestion_assets.py
documents/: Requirement.md
src/dbt/: dbt_project.yml  profiles.yml
src/dbt/models/: covid_duckdb.yml
src/dbt/models/marts/: country_metrics.sql  country_metrics.yml  daily_metrics.sql  daily_metrics.yml  daily_trends.sql  daily_trends.yml
src/dbt/models/reporting/covid_metrics/: country_mortality_analysis.sql  country_mortality_analysis.yml  global_daily_trends.sql  global_daily_trends.yml  top_countries_by_records.sql  top_countries_by_records.yml
src/dbt/models/staging/: stg_covid_metrics.sql  stg_covid_metrics.yml
src/dbt/tests/: test_no_negative_cases.sql
src/python/ingestion/: __init__.py  __main__.py
src/python/ingestion/config/: __init__.py  ingestion_config.py
src/python/ingestion/core/: __init__.py  covid_ingestion.py
src/python/ingestion/utils/: __init__.py  data_transformation.py  data_validation.py  logging_setup.py
tests/dagster/: test_assets.py  test_definitions.py
tests/ingestion/: __init__.py  test_config.py  test_ingestion.py  test_main.py
