[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "covid_pipeline"
version = "0.1.0"
description = "COVID-19 Data Pipeline using Dagster and dbt"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-dbt>=0.22.0",
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "duckdb>=0.9.0",
    "protobuf>=4.25.1",
    "grpcio>=1.59.3",
    "grpcio-health-checking>=1.59.3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["covid_dagster*"] 